add db levenstein analyzer
