# internal/app/apihandler/generated/specops/post_recommendations_analyze.go
@@ -1,0 +1,56 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package specops
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the generate command
+
+import (
+	"net/http"
+
+	"github.com/go-openapi/runtime/middleware"
+)
+
+// PostRecommendationsAnalyzeHandlerFunc turns a function with the right signature into a post recommendations analyze handler
+type PostRecommendationsAnalyzeHandlerFunc func(PostRecommendationsAnalyzeParams) middleware.Responder
+
+// Handle executing the request and returning a response
+func (fn PostRecommendationsAnalyzeHandlerFunc) Handle(params PostRecommendationsAnalyzeParams) middleware.Responder {
+	return fn(params)
+}
+
+// PostRecommendationsAnalyzeHandler interface for that can handle valid post recommendations analyze params
+type PostRecommendationsAnalyzeHandler interface {
+	Handle(PostRecommendationsAnalyzeParams) middleware.Responder
+}
+
+// NewPostRecommendationsAnalyze creates a new http.Handler for the post recommendations analyze operation
+func NewPostRecommendationsAnalyze(ctx *middleware.Context, handler PostRecommendationsAnalyzeHandler) *PostRecommendationsAnalyze {
+	return &PostRecommendationsAnalyze{Context: ctx, Handler: handler}
+}
+
+/*
+	PostRecommendationsAnalyze swagger:route POST /recommendations/analyze/ postRecommendationsAnalyze
+
+Получить рекомендации по штрихкоду с изображения
+*/
+type PostRecommendationsAnalyze struct {
+	Context *middleware.Context
+	Handler PostRecommendationsAnalyzeHandler
+}
+
+func (o *PostRecommendationsAnalyze) ServeHTTP(rw http.ResponseWriter, r *http.Request) {
+	route, rCtx, _ := o.Context.RouteInfo(r)
+	if rCtx != nil {
+		*r = *rCtx
+	}
+	var Params = NewPostRecommendationsAnalyzeParams()
+	if err := o.Context.BindValidRequest(r, route, &Params); err != nil { // bind params
+		o.Context.Respond(rw, r, route.Produces, route, err)
+		return
+	}
+
+	res := o.Handler.Handle(Params) // actually handle the request
+	o.Context.Respond(rw, r, route.Produces, route, res)
+
+}
